syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "SimpleServiceProto";


import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package com.yyc.grpc.contract;

service SimpleService {
    //request or response must be message
    rpc SayHello(google.protobuf.StringValue) returns(SayHelloResponse);

    //request get all response
    rpc GetAll(google.protobuf.Empty)returns(stream GetAllResponse);

    //client and server instant messenger
    rpc WeChat(stream WeChatRequest)returns(stream WeChatResponse);
}

message SayHelloResponse{
    string result = 1;
}

message GetAllResponse{
    oneof index_oneof {
        string member1 = 1;
        int32 member2 = 2;
        string member3 = 3;
    }
}

message WeChatRequest{
    string request = 1;
}
message WeChatResponse{
    string response = 1;
}
